# coriolis

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh  create_test_data.py  install.sh  pyproject.toml  run.py  run.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  clipboard.rs  data.rs  error.rs  lib.rs  main.rs  plot.rs  theme.rs  tree.rs  util.rs
src/data/: dataset.rs  mod.rs  node.rs  reader.rs  variable_data.rs
src/data_viewer/: mod.rs  ui.rs
src/data_viewer/ui/: heatmap.rs  plot.rs  table.rs
src/explorer/: details.rs  mod.rs  search.rs  tree.rs  ui.rs
src/file_browser/: mod.rs  ui.rs
src/navigation/: mod.rs  search.rs  tree.rs
src/overlay/: mod.rs  ui.rs
src/shared/: keymap_bar.rs  mod.rs  status_bar.rs
src/tanotly/: __init__.py  __main__.py  app.py  app.tcss  clipboard.py  config.py  details.py  plot_screen.py  plotting.py  search.py  tree.py  visualization.py
src/tanotly/data/: __init__.py  models.py  reader.py
src/tanotly/screens/: __init__.py  plot_screen.py
src/tanotly/screens/components/: __init__.py  colorbar.py  data_table.py  slice_controls.py
src/tanotly/screens/plot/: __init__.py  colormap.py  constants.py  renderer.py  utils.py  widgets.py
src/tanotly/utils/: __init__.py  search.py
src/ui/: browser.rs  formatters.rs  keymap_bar.rs  mod.rs  overlay.rs  status_bar.rs  theme.rs
src/util/: clipboard.rs  colormaps.rs  dimension_calculator.rs  layout_config.rs  mod.rs
