[package]
name = "coriolis"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Coriolis Contributors"]
description = "A fast, terminal-based netCDF data viewer with vim-style navigation"
readme = "README.md"
license = "MIT"
keywords = ["netcdf", "tui", "scientific", "data-viewer"]
categories = ["command-line-utilities", "science", "visualization"]

[[bin]]
name = "coriolis"
path = "src/main.rs"

[dependencies]
# TUI framework (pure Rust, no system deps!)
ratatui = "0.29"
crossterm = "0.29.0"

# Data reading
netcdf = { version = "0.11.1", features = ["static"] }

# Multi-dimensional arrays (pure Rust)
ndarray = "0.16"

# Error handling (pure Rust)
anyhow = "1.0"
thiserror = "2.0.17"

# CLI (pure Rust)
clap = { version = "4.5", features = ["derive"] }

# Utilities (pure Rust)
arboard = "3.4"

# Logging (pure Rust)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# String handling (pure Rust)
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

# Build configuration for static linking
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# This tells the linker to prefer static libraries
[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]
