[package]
name = "coriolis"
version = "1.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Coriolis Contributors"]
description = "A fast, terminal-based netCDF data viewer with vim-style navigation"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sumaliano/coriolis"
homepage = "https://github.com/sumaliano/coriolis"
documentation = "https://docs.rs/coriolis"
keywords = ["netcdf", "tui", "scientific", "data-viewer", "hdf5"]
categories = ["command-line-utilities", "science", "visualization"]
exclude = [
    ".github/",
    "tests/",
    "*.nc",
    ".gitignore",
]

[[bin]]
name = "coriolis"
path = "src/main.rs"

[dependencies]
# TUI framework (pure Rust, no system deps!)
ratatui = "0.30"
crossterm = "0.29.0"

# Data reading
netcdf = { version = "0.11.1", features = ["static"] }

# Multi-dimensional arrays (pure Rust)
ndarray = "0.17.1"

# Error handling (pure Rust)
anyhow = "1.0"
thiserror = "2.0.17"

# CLI (pure Rust)
clap = { version = "4.5", features = ["derive"] }

# Utilities (pure Rust)
arboard = "3.4"

# Logging (pure Rust)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# String handling (pure Rust)
unicode-width = "0.2.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

# Build configuration for static linking
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
